remove qp_solver

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,13 @@
-# cmake_minimum_required(VERSION 3.16)
-# project(mpc_project LANGUAGES CXX)
+cmake_minimum_required(VERSION 3.16)
+project(mpc_project LANGUAGES CXX)
 
-# set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 17)
 
-# include_directories(${CMAKE_SOURCE_DIR}/lib/eigen-3.4.0)
+include_directories(${CMAKE_SOURCE_DIR}/lib/eigen-3.4.0)
 
-# add_subdirectory(qp_solver)
+add_subdirectory(qp_solver)
 
-# add_executable(mpc_app qp_solver/src/QP.cpp)
+add_executable(mpc_app qp_solver/src/QP.cpp)
 
-# target_link_libraries(mpc_app PRIVATE qp_solver_lib)
+target_link_libraries(mpc_app PRIVATE qp_solver_lib)
 
